# MerelyAnotherGameEngine

./: .gitignore  CMakeLists.txt  MerelyAnotherGameEngine.sln
MerelyAnotherGameEngine/: CMakeLists.txt  MerelyAnotherGameEngine.cpp  MerelyAnotherGameEngine.vcxproj  MerelyAnotherGameEngine.vcxproj.filters
MerelyAnotherGameEngine/Core/: Asserts.h  NonCopyable.h  Rotor.h  Transform.h
MerelyAnotherGameEngine/MV/: MV_Camera.cpp  MV_Camera.h  MV_Device.cpp  MV_Device.h  MV_Model.cpp  MV_Model.h  MV_Object.cpp  MV_Object.h  MV_Pipeline.cpp  MV_Pipeline.h  MV_Renderer.cpp  MV_Renderer.h  MV_Swapchain.cpp  MV_Swapchain.h  MV_TestRenderSystem.cpp  MV_TestRenderSystem.h  MV_TransformComponent.cpp  MV_TransformComponent.h  MV_Window.cpp  MV_Window.h
MerelyAnotherGameEngine/Source/: MerelyAnotherGameEngine.cpp
MerelyAnotherGameEngine/Source/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Font.cpp  Font.h  FontFactory.cpp  FontFactory.h  StaticMesh.cpp  StaticMesh.h  StaticMeshFactory.cpp  StaticMeshFactory.h  Texture.cpp  Texture.h  TextureFactory.cpp  TextureFactory.h
MerelyAnotherGameEngine/Source/Core/: Array.h  Asserts.h  NonCopyable.h  Rotor.h  String.h  Transform.h  Types.h  Utils.h  _PCH.h
MerelyAnotherGameEngine/Source/Framework/: VulkanDevice.cpp  VulkanDevice.h
MerelyAnotherGameEngine/Source/Game/: CameraComponent.cpp  CameraComponent.h  GameObject.cpp  GameObject.h  GameObjectCommon.h  GameObjectComponent.cpp  GameObjectComponent.h  GameWorld.cpp  GameWorld.h  InputSystem.cpp  InputSystem.h  RigidBodyObjectComponent.cpp  RigidBodyObjectComponent.h  SpriteObjectComponent.cpp  SpriteObjectComponent.h  StaticMeshObjectComponent.cpp  StaticMeshObjectComponent.h  (+2 more)
MerelyAnotherGameEngine/shaders/: SimpleShader.frag  SimpleShader.vert
(+94 files in other folders)
